--- a/our_solar_system.html
+++ b/our_solar_system.html
@@ -11,32 +11,32 @@
         </div>
         <div>
             <h2>Mercury</h2>
-            <img src="media\Screenshot 2025-07-02 203933.png">
+            <img src="media\Mercury.png">
             <p>Mercury is the planet nearest to the Sun, and the smallest planet in our solar system.</p>
         </div>
         <div>
             <h2>Venus</h2>
-            <img src="media\Screenshot 2025-07-02 203944.png">
+            <img src="media\Venus.png">
             <p>Venus is the second planet from the Sun, and the sixth largest planet.</p>
         </div>
         <div>
             <h2>Earth</h2>
-            <img src="media\Screenshot 2025-07-02 203957.png">
+            <img src="media\Earth.png">
             <p>Earth - our home planet - is the third planet from the Sun, and the fifth largest planet.</p>
         </div>
         <div>
             <h2>Mars</h2>
-            <img src="media\Screenshot 2025-07-02 204005.png">
+            <img src="media\Mars.png">
             <p>Mars is the fourth planet from the Sun, and the seventh largest planet.</p>
         </div>
         <div>
             <h2>Jupiter</h2>
-            <img src="media\Screenshot 2025-07-02 204019.png">
+            <img src="media\Jupiter.png">
             <p>Jupiter is the fifth planet from the Sun, and the largest planet in our solar system.</p>
         </div>
         <div>
             <h2>Saturn</h2>
-            <img src="media\Screenshot 2025-07-02 204032.png">
+            <img src="media\Saturn.png">
             <p>Saturn is the sixth planet from the Sun, the second largest planet in our solar system.</p>
         </div>
         <div>
@@ -46,7 +46,7 @@
         </div>
         <div>
             <h2>Neptune</h2>
-            <img src="media\Screenshot 2025-07-02 204050.png">
+            <img src="media\Neptune.png">
             <p>Neptune is the eighth and most distant planet in our solar system. It's the fourth largest planet.</p>
         </div>
 
