--- a/our_solar_system.html
+++ b/our_solar_system.html
@@ -11,42 +11,42 @@
         </div>
         <div>
             <h2>Mercury</h2>
-            <img src="media\Mercury.png" alt="Small, round, and gray like a rough stone.">
+            <img src="media/Mercury.png" alt="Small, round, and gray like a rough stone.">
             <p>Mercury is the planet nearest to the Sun, and the smallest planet in our solar system.</p>
         </div>
         <div>
             <h2>Venus</h2>
-            <img src="media\Venus.png" alt="Round and yellowish-white, covered in thick clouds.">
+            <img src="media/Venus.png" alt="Round and yellowish-white, covered in thick clouds.">
             <p>Venus is the second planet from the Sun, and the sixth largest planet.</p>
         </div>
         <div>
             <h2>Earth</h2>
-            <img src="media\Earth.png" alt=" Round and mostly blue with white clouds and green-brown land.">
+            <img src="media/Earth.png" alt=" Round and mostly blue with white clouds and green-brown land.">
             <p>Earth - our home planet - is the third planet from the Sun, and the fifth largest planet.</p>
         </div>
         <div>
             <h2>Mars</h2>
-            <img src="media\Mars.png" alt="Round and reddish-orange, like rusty metal.">
+            <img src="media/Mars.png" alt="Round and reddish-orange, like rusty metal.">
             <p>Mars is the fourth planet from the Sun, and the seventh largest planet.</p>
         </div>
         <div>
             <h2>Jupiter</h2>
-            <img src="media\Jupiter.png" alt="Huge and round with swirling bands of brown, white, and red.">
+            <img src="media/Jupiter.png" alt="Huge and round with swirling bands of brown, white, and red.">
             <p>Jupiter is the fifth planet from the Sun, and the largest planet in our solar system.</p>
         </div>
         <div>
             <h2>Saturn</h2>
-            <img src="media\Saturn.png" alt="Large and round with pale yellow color and thin rings around it.">
+            <img src="media/Saturn.png" alt="Large and round with pale yellow color and thin rings around it.">
             <p>Saturn is the sixth planet from the Sun, the second largest planet in our solar system.</p>
         </div>
         <div>
             <h2>Uranus</h2>
-            <img src="media\Uranus.png" alt="Round and smooth-looking with a pale blue-green color.">
+            <img src="media/Uranus.png" alt="Round and smooth-looking with a pale blue-green color.">
             <p>Uranus is the seventh planet from the Sun, and the third largest planet in our solar system.</p>
         </div>
         <div>
             <h2>Neptune</h2>
-            <img src="media\Neptune.png" alt="Round and deep blue, often with a slightly darker spot.">
+            <img src="media/Neptune.png" alt="Round and deep blue, often with a slightly darker spot.">
             <p>Neptune is the eighth and most distant planet in our solar system. It's the fourth largest planet.</p>
         </div>
 
