--- a/our_solar_system.html
+++ b/our_solar_system.html
@@ -52,7 +52,7 @@
 
         <div>
             <h3>The universe</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/5zlcWdTs2-s?si=NY-Nlakc9--O1fHD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5zlcWdTs2-s?si=NY-Nlakc9--O1fHD" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div>
             <h3>For more infomations visit the links below :</h3>
